kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitops-service
  labels:
    app: gitops-argocd
spec:
  selector:
    app: gitops-argocd
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
